# wenjia-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: __init__.py  fortune_agent.py  main_agent.py  mystic_tools_agent.py  naming_agent.py  profile_agent.py  relationship_agent.py
app/core/: __init__.py  bazi_calculator.py  shensha_extracted.py
app/domain/: __init__.py  bazi_adapter.py  context_builders.py  schemas.py
app/guardrails/: __init__.py  output_checks.py
app/harness/: __init__.py  loop.py  policy.py
app/prompts/: fortune_analysis.md  main_agent.md  mystic_tools_agent.md  naming_agent.md  profile_agent.md  relationship_agent.md
app/runtime/: config.py  flow_events.py  models.py  output_format.py  profile_store.py  run_context.py  runner.py  stream_runner.py
app/tools/: bazi_tools.py
apps/: __init__.py
apps/web/: README.en.md  README.md  __init__.py
apps/web/backend/: __init__.py  app_factory.py  lifespan.py  main.py  schemas.py  settings.py
apps/web/frontend/: Dockerfile  (+5 more)
docs/: AGENT_FLOW_VISUALIZATION.md  AGENT_PROPOSAL.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  OPTIMIZATION_REQUIREMENTS.md  RD_PROCESS.md  REQUIREMENTS.md  SOFTWARE_DESIGN.md  TOOL_PLUGIN_GUIDE.md
docs/deploy/: nginx.example.conf
evals/: golden_cases.json
examples/: cli_agent.py  cli_bazi.py
examples/web/: README.md  __init__.py  app.py
scripts/: deploy_static_nginx.sh  deploy_ubuntu.sh  run_evals.py
tests/: conftest.py  test_bazi_adapter.py  test_city_data.py  test_context_builders.py  test_evals.py  test_flow_events.py  test_guardrails.py  test_harness.py  test_input_guardrails.py  test_memory_store.py  test_output_format.py  test_policy.py  test_profile_store.py  test_prompts_and_agents.py  test_report_schemas.py  test_run_context.py  test_runtime_models.py  test_session_memory.py  test_tools.py  test_trace.py  test_web_example.py
wenjia_agent/agents/: __init__.py  fortune_agent.py  main_agent.py  mystic_tools_agent.py  naming_agent.py  profile_agent.py  relationship_agent.py
wenjia_agent/core/: __init__.py  bazi_calculator.py  city_data.py
wenjia_agent/domain/: bazi_adapter.py  context_builders.py  schemas.py
wenjia_agent/evals/: __init__.py  runner.py
wenjia_agent/guardrails/: __init__.py  input_checks.py  output_checks.py
wenjia_agent/harness/: __init__.py  loop.py  policy.py
wenjia_agent/prompts/: __init__.py  fortune_analysis.md  main_agent.md  mystic_tools_agent.md  naming_agent.md  profile_agent.md  relationship_agent.md
wenjia_agent/runtime/: config.py  flow_events.py  memory_store.py  models.py  output_format.py  profile_store.py  run_context.py  runner.py  session_memory.py  stream_runner.py  suggestions.py  trace.py
wenjia_agent/tools/: __init__.py  bazi_tools.py
(+63 files in other folders)
