[project]
name = "wenjia-agent"
version = "0.1.0"
description = "Open-source Chinese metaphysics Agent powered by the OpenAI Agents SDK."
authors = [{ name = "wenjia.ai contributors" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["agent", "openai", "bazi", "metaphysics", "fortune-telling"]
dependencies = [
  "openai-agents[sqlalchemy]>=0.17.7",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "lunar-python>=1.4.8",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.6"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
