[project]
name = "wenjia-agent"
version = "0.1.0"
description = "Open-source Chinese metaphysics Agent powered by the OpenAI Agents SDK."
authors = [{ name = "wenjia.ai contributors" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["agent", "openai", "bazi", "metaphysics", "fortune-telling"]
dependencies = [
  "openai-agents[sqlalchemy]>=0.17.7",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "lunar-python>=1.4.8",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "fastapi (>=0.138.1,<0.139.0)",
  "uvicorn[standard] (>=0.49.0,<0.50.0)",
]

[project.urls]
Homepage = "https://www.jiajiahome.top/"
Repository = "https://github.com/Hjiassen/wenjia-agent"
Issues = "https://github.com/Hjiassen/wenjia-agent/issues"
Documentation = "https://github.com/Hjiassen/wenjia-agent#readme"

[tool.poetry]
name = "wenjia-agent"
version = "0.1.0"
description = "Open-source Chinese metaphysics Agent powered by the OpenAI Agents SDK."
authors = ["wenjia.ai contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "wenjia_agent" }, { include = "apps" }]

[tool.poetry.urls]
Homepage = "https://www.jiajiahome.top/"
Repository = "https://github.com/Hjiassen/wenjia-agent"
Issues = "https://github.com/Hjiassen/wenjia-agent/issues"
Documentation = "https://github.com/Hjiassen/wenjia-agent#readme"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai-agents = { version = ">=0.17.7", extras = ["sqlalchemy"] }
pydantic = ">=2.5"
pydantic-settings = ">=2.1"
python-dotenv = ">=1.0"
lunar-python = ">=1.4.8"
sqlalchemy = ">=2.0"
aiosqlite = ">=0.19"
fastapi = ">=0.138.1,<0.139.0"
uvicorn = { version = ">=0.49.0,<0.50.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.6"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
